@@ -22,6 +22,15 @@
   </head>
   <body>
 
+<h2>DEPRECATED</h2>
+<p style="color:red">
+  The Lucene 3.x spatial contrib module is deprecated as of Solr 3.6. In Solr 4 there is a new spatial
+  module that should be used instead.
+  For further information, see
+  <a href="https://issues.apache.org/jira/browse/LUCENE-2599">LUCENE-2599</a>.
+  <br/>
+  The old documentation follows below:
+</p>
 <p>This package makes it possible to filter and sort according to
 geographical constraints.  For example, filter to include only
 restaurants within 2 miles of a specified latitude/longitude, sorting
